apis/0.12.0/manage/Metrics/index.md
---
title: Metrics

version: 0.12.0
layout: default
sdk: manage
---

# Metrics Module
---
Version Metrics 0.12.0

## Table of Contents
   - [Table of Contents](#table-of-contents)
   - [Usage](#usage)
   - [Overview](#overview)
   - [Methods](#methods)
     - [event](#event)
   - [Types](#types)
     - [EventObject](#eventobject)
     - [EventObjectPrimitives](#eventobjectprimitives)



## Usage
To use the Metrics module, you can import it into your project from the Firebolt SDK:

```javascript
import { Metrics } from '@firebolt-js/manage-sdk'
```


## Overview
 Methods for sending metrics

## Methods

### event

Inform the platform of 1st party distributor metrics.

```typescript
function event(schema: string, data: EventObject): Promise<null>
```

Parameters:

| Param                  | Type                 | Required                 | Description                 |
| ---------------------- | -------------------- | ------------------------ | ----------------------- |
| `schema` | `string` | true | The schema URI of the metric type <br/>format: uri |
| `data` | [`EventObject`](#eventobject) | true | A JSON payload conforming the the provided schema  |


Promise resolution:

```typescript
null
```

Capabilities:

| Role                  | Capability                 |
| --------------------- | -------------------------- |
| uses | xrn:firebolt:capability:metrics:distributor |


#### Examples


Send foo event

JavaScript:

```javascript
import { Metrics } from '@firebolt-js/manage-sdk'

Metrics.event("http://meta.rdkcentral.com/some/schema", {"foo":"foo"})
    .then(results => {
        console.log(results)
    })
```

Value of `results`:

```javascript
null
```
<details markdown="1" >
<summary>JSON-RPC:</summary>
Request:

```json
{
	"jsonrpc": "2.0",
	"id": 1,
	"method": "Metrics.event",
	"params": {
		"schema": "http://meta.rdkcentral.com/some/schema",
		"data": {
			"foo": "foo"
		}
	}
}
```

Response:

```json
{
	"jsonrpc": "2.0",
	"id": 1,
	"result": null
}
```
</details>


---



## Types

### EventObject



```typescript
type EventObject = {
  [property: string]: EventObjectPrimitives | EventObjectPrimitives | EventObject[] | EventObject
}
```

See also: 

string | number | number | boolean | null
[EventObject](#eventobject)

---

### EventObjectPrimitives



```typescript
type EventObjectPrimitives = string | number | number | boolean | null
```



---
